--- a/long_version/main.tex
+++ b/long_version/main.tex
@@ -1,10 +1,10 @@
 %\documentclass[a4paper, 12pt]{article}
 %\documentclass[a4paper, 12pt, draft]{article} % don't include images, leave a border of same size...great
-%\documentclass[journal]{IEEEtran}
-\documentclass{llncs}
+\documentclass[journal]{IEEEtran}
 
-%\usepackage[cmex10]{amsmath, mathtools}
-\usepackage{amsmath,amssymb,amsbsy,amsfonts,}%amsthm}
+%\usepackage[cmex10]{amsmath}
+\usepackage{amsmath,mathtools,amssymb,amsbsy,amsfonts,amsthm}
+%\usepackage{amsmath,amssymb,amsbsy,amsfonts}
 \usepackage{multirow}
 \usepackage{bm}
 \usepackage{enumerate}
@@ -47,10 +47,10 @@
 %\renewcommand{\Phi}{\mat{\Phi}}
 
 
-%\newtheorem{definition}{Definition}[section]
-%\newtheorem{proposition}{Proposition}[section]
-%\newtheorem{theorem}{Theorem}[section]
-%\newtheorem{corollary}{Corollary}[section]
+\newtheorem{definition}{Definition}[section]
+\newtheorem{proposition}{Proposition}[section]
+\newtheorem{theorem}{Theorem}[section]
+\newtheorem{corollary}{Corollary}[section]
 
 \title{Are Mixed-Membership Models Adapted for Link
 Prediction in Social Networks ?}
