--- a/DSAA/dsaa.tex
+++ b/DSAA/dsaa.tex
@@ -72,18 +72,14 @@ We assess here whether standard stochastic mixed membership models are adapted f
 \section{Introduction}
 \label{sec:intro}
 
-Several powerful relational learning models have been proposed to solve the problem commonly referred to as \textit{link prediction} that consists in predicting the likelihood of a future association between two nodes in a network \cite{LibenNowell07,HassanZaki11}. Among such models, the class of stochastic mixed membership models has received much attention as such models can be used to discover hidden properties and infer new links in social networks. Two main models in this class have been proposed and studied in the literature: the latent feature model \cite{BMF} and its non-parametric extension \cite{ILFRM}, and the mixed-membership stochastic block model \cite{MMSB}, and its non parametric extension \cite{iMMSB,diMMSB}.  
+Several powerful relational learning models have been proposed to solve the problem commonly referred to as \textit{link prediction} that consists in predicting the likelihood of a future association between two nodes in a network \cite{LibenNowell07,HassanZaki11}. Among such models, the class of stochastic mixed membership models has received much attention as such models can be used to discover hidden properties and infer new links in social networks. Two main models in this class have been proposed and studied in the literature: the latent feature model \cite{BMF} and its non-parametric extension \cite{ILFRM}, and the mixed-membership stochastic block model \cite{MMSB}, and its non parametric extension \cite{iMMSB,diMMSB}. More generally, these models fall in the category of mixed-membership models who establish a common theoretical framework that encompass a wide range of models (such as admixture and topic model) that are able to  learn complex pattern from structured data \cite{airoldi2014handbook}.
 
 Nevertheless, although drawn from a wide range of domains, real world social networks exhibit general properties and one can wonder if these models are able to capture these properties. For instance, we can mentioned the small world property which implies that most vertices can be reached from every other through a small number of edges or the community structure which appears when vertices are grouped in a way such that vertices in a group are more connected to vertices belonging to the same group compared to other vertices.
  In this work, we focus on two other important properties, namely \textit{homophily} and \textit{preferential attachment} \cite{Newman2010, Barabasi2003} and assess to which extent link prediction models, as the ones mentioned above, comply them.
-Homophily is verified in a network when similar vertices according to their properties tend to be more connected than dissimilar vertices.  Preferential attachment states that a vertex is more likely to create connections with vertices having a high degree.  It leads to networks where the degree distribution can usually be modeled by a power law.
-
-// to complet ~\\
-\textbf{A dev Interet de la classe de models etudies}
+Homophily is verified in a network when similar vertices according to their properties tend to be more connected than dissimilar vertices.  Preferential attachment states that a vertex is more likely to create connections with vertices having a high degree. In Graph theory, the preferential attachment is used to explain the emergence of scale-free networks. They are characterised by a power-law degree distribution who are ubiquitous in real world data.
 
 
-// to complete ~\\
-The rest of this paper is organized as follows: in the next section, related works are presented and in the third section we introduce the  background of the stochastic mixed membership models . In the  fourth and fifth sections we introduce formal definitions of the compliance of the models to homophily and preferential attachment in social networks, and we study how the models comply or not with those properties. In the sixth section, we illustrate our findings on 2 synthetic networks and 2 real world networks. Finally, we conclude in the last section.
+The rest of this paper is organized as follows: in the next section, related works are presented and in the third section we introduce the  background of the stochastic mixed membership models. In the fourth and fifth sections we introduce formal definitions of the compliance of the models to homophily and preferential attachment in social networks, and we study how the models comply or not with those properties. In the sixth section, we illustrate our propositions on 2 synthetic networks and 2 real world networks. Finally, we conclude in the last section.
 
 
 
@@ -100,9 +96,7 @@ Recently,  the class of stochastic mixed membership models have been successfull
 In this article, we focus on two properties:  \textit{homophily} and \textit{preferential attachment} \cite{Newman2010, Barabasi2003}. The interest of these properties has been widely emphasized in previous works notably for modeling and generating networks reflecting properties of real networks, like in the Barab\`asi-Albert model \cite{albert2002statistical} or Buckley and Osthus model \cite{Buckley2001} which integrate a preferential attachment mechanism, in the Multiplicative Attribute Graph (MAG) model \cite{Kim2012} which considers nodes affinities  or the Dancer model which takes in consideration both properties \cite{Largeron2017} but these models do not belong to the family of Bayesian models considered in this article.  These properties have also  been exploited for improving the results obtained in classical tasks such as community detection \cite{Ciglan2013,Zhang2016} or link prediction \cite{Aiello2012,Zeng2016}. However, few theoretical works have been done to study to what extend the models comply these properties.
 
 
-Concerning the preferential attachment, Orbanz and Royhowever pointed out that models belonging to the family of infinitely exchangeable Bayesian graph models cannot generate sparse networks which not compatible with power law degree distribution among the vertices \cite{orbanz2015bayesian}. By relaxing the exchangeability assumptions underlying the model, Lee \textit{et al.} \cite{Lee2015} analytically prove that their random model preserves the power law behavior and show that it satisfies the small world property. However the complexity of the model makes it hard to use in practice \textbf{Adrien A revoir ?}.
-
-
+Concerning the preferential attachment, Orbanz and Royhowever pointed out that models belonging to the family of infinitely exchangeable Bayesian graph models cannot generate sparse networks which not compatible with power law degree distribution among the vertices \cite{orbanz2015bayesian}. Consequently, Lee \textit{et al.} \cite{Lee2015} proposed a random network model in order to capture the power law behavior along with the small world property. However the model remains challenging to use in practice, especially for link prediction, due to the relaxation of the exchangeability assumptions.
 
 Concerning the homophily effect, \cite{hoff2008modeling} pointed out that the latent eigen model can comply both homophily and stochastic equivalence in undirected graphs but without providing a formal definitions of these properties. Furthermore, Li \textit{et al.}, suggest that the latent eigen model  MLFM fails to model homophily  for directed graphs and, for enhancing homophily modeling in MLFM, they designed the  GLFM model \cite{Li11}.
 
